--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -58,18 +58,13 @@ jobs:
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
     
-    - name: 涡轮增雕进程
-        run: |
-          cd package
-          mkdir openwrt-packages
-          cd openwrt-packages
-          git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
      
-     - name: Update feeds
+     - name: 同步最新的源码
         run: |
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
-
+          git remote add openwrt https://github.com/coolsnowwolf/lede.git
+          git pull openwrt master
+          git remote -v
+          
       - name: Costom configure file
         run: |
           rm -f ./.config*
@@ -178,7 +173,6 @@ jobs:
 
           # LuCI主题:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-theme-atmaterial=y
           CONFIG_PACKAGE_luci-theme-argon=y
           CONFIG_PACKAGE_luci-theme-netgear=y
           EOF
